# fastapicryptocheck

./: README.md  docker-compose.yaml  pyproject.toml
fastapicryptocheck/api/: __init__.py  get_crypto_currencies.py
fastapicryptocheck/api_import/: http_client.py
fastapicryptocheck/backend/: dockerfile  main.py  requirements.txt
fastapicryptocheck/backend/api/: __init__.py  get_crypto_currencies.py  init.py
fastapicryptocheck/backend/api_import/: http_client.py
fastapicryptocheck/backend/core/: config.py
fastapicryptocheck/core/: config.py
fastapicryptocheck/frontend/: dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
fastapicryptocheck/frontend/src/: App.jsx  index.css
fastapicryptocheck/frontend/src/components/: CryptocurrencyCard.jsx
