[tool.poetry]
name = "fastapicryptocheck"
version = "0.1.0"
description = ""
authors = ["Lev <lafitel31@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
pydantic-settings = "^2.4.0"
aiohttp = "^3.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
