[tool.poetry]
name = "fastapicryptocheck"
version = "0.1.0"
description = ""
authors = ["Lev <lafitel31@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.0"}
pydantic-settings = "^2.4.0"
aiohttp = "^3.10.2"
uvicorn = "^0.30.5"
async-lru = "^2.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
